--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,10 @@ input[type=submit] {
 
 @media screen and (max-width: 640px){
 
+    header {
+        position: static;
+    }
+
     #name-box{
         width: 100%;
         margin-left:0;
